tests/invalid_escape_sequence_diag/expected_err.txt
grammar.peg:1:10: error: This is not a recognized escape sequence.
 1 | Root <- '\h'
   |          ~~
